tests/typecheck/bad/builtin-isqrt-int32.scilexp
let one = Int32 1 in
builtin isqrt one
